--- a/TechTalentBlog/src/main/resources/templates/blogpost/index.html
+++ b/TechTalentBlog/src/main/resources/templates/blogpost/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tech Talent Blog</title>
 </head>
 <body>
 
-
 <h1>Welcome To Our Blog Post Site</h1>
 <h3>Check out our blogs!</h3>
+<div>
+    <p>Please use the form below to submit a blog post</p>
+</div>
 
+<div>
+    <form action="#" th:action="@{/}" th:object="${blogpost}" method="post">
+        <table>
+            <tr>
+                <td>Title</td>
+                <td><input type="text" th:field="*{title}" /></td>
+            </tr>
 
+            <tr>
+                <td>Author</td>
+                <td><input type="text" th:field="*{author}" /></td>
+            </tr>
+
+            <tr>
+                <td>Blog Entry</td>
+                <td><input type="text" th:field="*{blogEntry}" /></td>
+            </tr>
+
+            <tr>
+                <td><button type="submit">Submit Your Post</button></td>
+            </tr>
+        </table>
+    </form>
+</div>
 </body>
 </html>
