--- a/TechTalentBlog/src/main/resources/templates/blogpost/result.html
+++ b/TechTalentBlog/src/main/resources/templates/blogpost/result.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+    <div>
+      <header>
+        <h3>Blog Post Form</h3>
+      </header>
+    </div>
+
+    <div>
+      <p>Thank you for your submission!</p>
+    </div>
+
+    <div>
+      <h4>Blog Post:</h4>
+      <p th:text="${title}" />
+      <p th:text="${author}" />
+      <p th:text="${blogEntry}" />
+    </div>
+
 
 </body>
+
 </html>
+
+
+
+
+
+
