--- a/TechTalentBlog/src/main/resources/templates/blogpost/new.html
+++ b/TechTalentBlog/src/main/resources/templates/blogpost/new.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <link href="webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -27,7 +27,7 @@
     </form>
 
   </div>
-<script src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="webjars/jquery/1.9.1/jquery.min.js"></script>
+<script src="../../webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="../../webjars/jquery/1.9.1/jquery.min.js"></script>
 </body>
 </html>
