--- a/TechTalentBlog/src/main/resources/templates/blogpost/index.html
+++ b/TechTalentBlog/src/main/resources/templates/blogpost/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="../../webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/standard.css" rel="stylesheet">
+    <link href="webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static.css/standard.css" rel="stylesheet">
 </head>
 <body>
+
+<!--<div th:replace="fragments/navbar :: navbar"></div>-->
+<div th:replace="fragments/navbar"></div>
+
 <div class="container">
-    <div th:replace="fragments/navbar :: navbar" ></div>
+
 
     <h1>Welcome to our Blog Post Site!</h1>
     <h3>Check out our blogs!</h3>
@@ -29,20 +33,18 @@
                         <p th:text="${blog.blogEntry}"/>
                     </div>
                     <div class="panel-footer">
-                        <!--                        Link to Update -->
                         <!--                        Link to Show -->
-                        <!--                        Link to Destroy -->
-                        <form action="#"
-                              th:action="@{'/blogposts/{id}'(id=${blog.id})}"
-                              th:method="delete"
-                              class="form-horizontal">
 
-                            <div class="form-group">
-                                <input type="hidden" name="_method" value="delete" />
-                                <button type="submit" class="btn btn-danger btn-block" th:text="Delete">Delete</button>
-                            </div>
-
-                        </form>
+                        <div class="card-footer">
+                            <!--                        Link to Update -->
+                            <a href="#" th:href="@{blogPost/{id}(id=${blog.id})}">
+                                <button class="btn btn-light">Edit Post</button>
+                            </a>
+                            <!--                        Link to Destroy -->
+                            <a href="#" th:href="@{blogPost/delete/{id}(id=${blog.id})}">
+                                <button class="btn btn-danger" type="submit">Delete Post</button>
+                            </a>
+                        </div>
 
                     </div>
                 </div>
@@ -50,21 +52,15 @@
         </div>
     </div>
 
-    <a th:href="@{/blogposts/new}">
-        <button class="btn btn-primary">Submit a New Blog Post</button>
-    </a>
+    <!--    <a th:href="@{/blogposts/new}">-->
+    <!--        <button class="btn btn-primary">Submit a New Blog Post</button>-->
+    <!--    </a>-->
 
 </div>
 
-<script src="../../webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="../../webjars/jquery/1.9.1/jquery.min.js"></script>
+<script src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="webjars/jquery/1.9.1/jquery.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
 
 
