--- a/TechTalentBlog/src/main/resources/templates/blogpost/new.html
+++ b/TechTalentBlog/src/main/resources/templates/blogpost/new.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-  <link href="../../webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>New</title>
+
+  <div th:replace="fragments/style"></div>
 </head>
 <body>
-  <div class="container">
-    <form action="#" th:action="@{/blogposts}" th:object="${blogPost}" method="post">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Blog Title" th:field="*{title}">
+<div th:replace="fragments/navbar"></div>
 
-      </div>
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Your Name Here..." th:field="*{author}">
+<div class="container">
+  <p>Please use the form below to submit a Blog Post: </p>
+  <form action="#" th:action="@{/blogPost}" th:object="${blogPost}" method="post">
 
-      </div>
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Blog Entry" th:field="*{blogEntry}">
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Blog Title..." th:field="*{title}">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Your Name Here.." th:field="*{author}">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Blog Entry" th:field="*{blogEntry}">
+    </div>
 
-      </div>
-      <div>
-        <button class="btn btn-primary">Submit Your Post</button>
-      </div>
+    <button class="btn btn-primary">Submit Your Post</button>
 
-    </form>
+  </form>
+</div>
 
-  </div>
-<script src="../../webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="../../webjars/jquery/1.9.1/jquery.min.js"></script>
+<div th:replace="fragments/body"></div>
 </body>
 </html>
