--- a/TechTalentBlog/src/main/resources/templates/blogpost/result.html
+++ b/TechTalentBlog/src/main/resources/templates/blogpost/result.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="../../webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
+    <div th:replace="fragments/style"></div>
 </head>
 <body>
-    <div>
-      <header>
-        <h3>Blog Post Form</h3>
-      </header>
-    </div>
+<div th:replace="fragments/navbar"></div>
+<div class="container">
 
-    <div>
-      <p>Thank you for your submission!</p>
-    </div>
 
-    <div class="container">
-      <h4>Blog Post:</h4>
-      <p th:text="${title}" />
-      <p th:text="${author}" />
-      <p th:text="${blogEntry}" />
-    </div>
-    <div>
-        <a th:href="@{/}"><button class="btn btn-success">Back to the Home Page</button></a>
-        <a th:href="@{/}"><button class="btn btn-primary">Submit a New Blog Post</button></a>
-    </div>
 
-    <script src="../../webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="../../webjars/jquery/1.9.1/jquery.min.js"></script>
+    <h3>Blog Post Form</h3>
+    <p>Thank you for your submission!</p>
+    <h4>Blog Post:</h4>
+    <p th:text="${title}" />
+    <p th:text="${author}" />
+    <p th:text="${blogEntry}" />
+
+
+    <a th:href="@{/}"><button class="btn btn-success">Back To Home Page</button></a>
+    <a th:href="@{/blogPosts/new}"><button class="btn btn-primary">Submit a New Blog Post</button></a>
+
+</div>
+<div th:replace="fragments/body"></div>
 </body>
-
 </html>
-
 
 
 
